<resources>
    <string name="app_name">Social Automation</string>
    <string name="ballona">BALLONA</string>
    <string name="next">Next</string>
    <string name="one_click_to_all_the_world">One Click To All The World</string>
    <string name="or">OR</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_with_google">sign with google</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="sign_in_with_x">sign in with x</string>
    <string name="done_btn">done btn</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_sign_in_page">go to sign in page</string>
    <string name="go_to_log_in_page">go to log in page</string>
    <string name="get_started">Get Started</string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="allready_have_account">Allready Have account?</string>
    <string name="this_is_home">This is home</string>
    <string name="idea">Idea</string>
    <string name="tweet">Tweet . . . .</string>
    <string name="dont_waste_your_time">Dont Waste Your Time</string>
</resources>